feat: add custom llm endpoint for slai devs
